--- a/HatBdFontend/src/app/Admin/admin-user-list/admin-user.component.html
+++ b/HatBdFontend/src/app/Admin/admin-user-list/admin-user.component.html
@@ -3,7 +3,10 @@
   <h2 class="title">Admin Panel – User List</h2>
 
   <!-- Save New User Button -->
-  <button class="save-btn" type="button">
+  <button
+    class="save-btn"
+    type="button"
+    (click)="goToAddUser()">
     Save New User
   </button>
 
