profile, add card update

--- a/HatBdFontend/src/pages/nabver/nabver.component.html
+++ b/HatBdFontend/src/pages/nabver/nabver.component.html
@@ -33,7 +33,7 @@
         </span>
 
         <div class="dropdown-menu">
-          <a routerLink="/Profile">Profile</a>
+          <a routerLink="/profile">Profile</a>
         </div>
       </div>
 
