--- a/HatBdFontend/src/pages/nabver/nabver.component.html
+++ b/HatBdFontend/src/pages/nabver/nabver.component.html
@@ -34,6 +34,7 @@
 
         <div class="dropdown-menu">
           <a routerLink="/profile">Profile</a>
+          <a routerLink="/orders">My Orders</a> <!-- ✅ Connected to OrderComponent -->
         </div>
       </div>
 
