--- a/HatBdFontend/src/pages/home/home.component.html
+++ b/HatBdFontend/src/pages/home/home.component.html
@@ -22,10 +22,10 @@
       <div class="cat-icon-box"><i class="fas fa-tshirt"></i></div>
       <p>Fashion</p>
     </div>
-    <div class="cat-card">
+    <!-- <div class="cat-card">
       <div class="cat-icon-box"><i class="fas fa-laptop"></i></div>
       <p>Computing</p>
-    </div>
+    </div> -->
     <div class="cat-card">
       <div class="cat-icon-box"><i class="fas fa-home"></i></div>
       <p>Home Decor</p>
@@ -34,10 +34,10 @@
       <div class="cat-icon-box"><i class="fas fa-heartbeat"></i></div>
       <p>Health</p>
     </div>
-    <div class="cat-card">
+    <!-- <div class="cat-card">
       <div class="cat-icon-box"><i class="fas fa-baby"></i></div>
       <p>Baby Care</p>
-    </div>
+    </div> -->
   </div>
 </div>
 
