--- a/HatBdFontend/src/app/Admin/admin-layout/admin-layout.component.html
+++ b/HatBdFontend/src/app/Admin/admin-layout/admin-layout.component.html
@@ -28,6 +28,8 @@
 
       <div class="navbar-right">
         <span class="admin-name">Admin</span>
+        <a routerLink="/layout/profile" routerLinkActive="active">Profile</a>
+
         <button class="logout-btn">Logout</button>
       </div>
     </header>
