seller dasbord, admon dasbord, Serch bar

--- a/HatBdFontend/src/app/Admin/adminprifile/adminprifile.component.html
+++ b/HatBdFontend/src/app/Admin/adminprifile/adminprifile.component.html
@@ -2,6 +2,8 @@
 
   <h2>Admin Profile</h2>
 
+  <img src="" alt="">
+
   <div class="profile-card mb-4 py-4 px-3">
     <p><strong>Full Name:</strong> {{ admin.fullName }}</p>
     <p><strong>Username:</strong> {{ admin.userName }}</p>
