--- a/HatBdFontend/src/app/Admin/admin-dash-board/admin-dash-board.component.html
+++ b/HatBdFontend/src/app/Admin/admin-dash-board/admin-dash-board.component.html
@@ -1,23 +1,22 @@
-<h2 class="page-title">Dashboard Overview</h2>
+<div class="dashboard">
 
-<div class="card-grid">
-  <div class="card">
-    <p>Total Users</p>
-    <h3>120</h3>
-  </div>
+        <div class="stats">
 
-  <div class="card">
-    <p>Total Products</p>
-    <h3>85</h3>
-  </div>
+          <div class="card users text-center">
+            <p>Total Users</p>
+            <h3>{{ totalUsers }}</h3>
+          </div>
 
-  <div class="card">
-    <p>Total Orders</p>
-    <h3>46</h3>
-  </div>
+          <div class="card products text-center">
+            <p>Total Products</p>
+            <h3>{{ totalProducts }}</h3>
+          </div>
 
-  <div class="card">
-    <p>COD Collection</p>
-    <h3>৳ 58,000</h3>
-  </div>
-</div>
+          <div class="card orders text-center">
+            <p>Total Orders</p>
+            <h3>{{ totalOrders }}</h3>
+          </div>
+
+        </div>
+
+      </div>
