--- a/HatBdFontend/src/app/Seller/seller-dashboard/sell-dashboard.component.html
+++ b/HatBdFontend/src/app/Seller/seller-dashboard/sell-dashboard.component.html
@@ -6,16 +6,11 @@
 
     <div class="card">
       <p>Total Products</p>
-      <h3>{{ totalProducts }}</h3>
+      <h3>{{ products.length }}</h3>
     </div>
 
     <div class="card">
-      <p>Total Orders</p>
-      <h3>{{ totalOrders }}</h3>
-    </div>
-
-    <div class="card">
-      <p>Pending Orders</p>
+      <p>Pending Products</p>
       <h3>{{ pendingOrders }}</h3>
     </div>
 
