--- a/HatBdFontend/src/pages/nabver/nabver.component.html
+++ b/HatBdFontend/src/pages/nabver/nabver.component.html
@@ -13,9 +13,12 @@
   <div class="main-header">
     <a routerLink="/" class="logo">HatBD</a>
     <div class="search-bar">
-      <input type="text" placeholder="Search for products, brands and more...">
+      <input type="text" placeholder="Search for products, brands and more..." [(ngModel)]="searchText"
+        (input)="onSearch()" />
+
       <button><i class="fas fa-search"></i></button>
     </div>
+
     <div class="user-actions">
 
       @if (!isLoggedIn()) {
@@ -38,9 +41,9 @@
         </div>
       </div>
 
-      <div class="action-item cart-btn-custom"  style="cursor: pointer;">
+      <div class="action-item cart-btn-custom" style="cursor: pointer;">
         <div class="cart-icon-wrapper" style="position: relative; display: inline-block;">
-          <a ><i (click)="goToCart()" class="fas fa-shopping-cart" style="font-size: 1.5rem; color: #333;"></i></a>
+          <a><i (click)="goToCart()" class="fas fa-shopping-cart" style="font-size: 1.5rem; color: #333;"></i></a>
 
           <!-- <span class="cart-badge">
             {{ cartCount() }}
