--- a/HatBdFontend/src/pages/home/home.component.html
+++ b/HatBdFontend/src/pages/home/home.component.html
@@ -61,17 +61,17 @@
 
       <p class="price">৳ {{ p.price }}</p>
 
-      <p class="category">
+      <!-- <p class="category">
         {{ p.categoryName }} / {{ p.subCategoryName }}
-      </p>
+      </p> -->
 
       <p class="stock">
         Stock: {{ p.stockquantity }}
       </p>
 
-      <span class="created">
+      <!-- <span class="created">
         Created By: {{ p.createdby }}
-      </span>
+      </span> -->
 
       <!-- ADD TO CART -->
       <button
