Distric, Thana,Area page making

--- a/HatBdFontend/src/app/Admin/admin-layout/admin-layout.component.html
+++ b/HatBdFontend/src/app/Admin/admin-layout/admin-layout.component.html
@@ -14,6 +14,9 @@
       <a routerLink="/layout/order" routerLinkActive="active"> OrderManage</a>
       <a routerLink="/layout/category" routerLinkActive="active"> Category</a>
       <a routerLink="/layout/subcategory" routerLinkActive="active">SubCategory</a>
+      <a routerLink="/layout/district" routerLinkActive="active">District</a>
+      <a routerLink="/layout/thana" routerLinkActive="active">Thana</a>
+      <a routerLink="/layout/area" routerLinkActive="active">Area</a>
       <a routerLink="/deliveryman" routerLinkActive="active">Delivery Man</a>
     </nav>
   </aside>
