--- a/HatBdFontend/src/pages/footer/footer.component.html
+++ b/HatBdFontend/src/pages/footer/footer.component.html
@@ -21,16 +21,15 @@
       <div class="footer-col">
         <h4>Contact</h4>
         <p><i class="fas fa-map-marker-alt"></i> Uttara, Dhaka</p>
-        <p><i class="fas fa-phone"></i> +880 1519600174</p>
-        <p><i class="fas fa-envelope"></i> info&#64;hatbd.com</p>
+        <p><i class="fas fa-phone"></i> +880 1519600174,+8801600778616</p>
+        <p><i class="fas fa-envelope"></i> info&#64;hatbd.com,info&#64;techstdio.com</p>
       </div>
     </div>
   </div>
   <div class="footer-bottom">
     <div class="footer-container">
-      <p>&copy; 2025 HatBD. All Rights Reserved.</p>
+      <p>&copy; 2025 HatBD. Prepared By Rajib Khan.</p>
       <div class="payment-methods">
-        <i class="fab fa-cc-visa"></i> <i class="fab fa-cc-mastercard"></i>
       </div>
     </div>
   </div>
