--- a/HatBdFontend/src/app/Admin/area/area.component.css
+++ b/HatBdFontend/src/app/Admin/area/area.component.css
@@ -1,17 +1,8 @@
 .container {
-  max-width: 500px;
+  max-width: 900px;
   margin: 20px auto;
 }
 
-.input-group {
-  display: flex;
-}
-
-.input-group input {
-  flex: 1;
-  margin-right: 10px;
-}
-
-.input-group button {
-  width: 120px;
+table td {
+  vertical-align: middle;
 }
