--- a/HatBdFontend/src/app/Seller/seller-layout/seller-layout.component.html
+++ b/HatBdFontend/src/app/Seller/seller-layout/seller-layout.component.html
@@ -20,8 +20,8 @@
         Orders
       </a>
 
-      <a routerLink="/seller/payments" routerLinkActive="active">
-        Payments
+      <a routerLink="/seller/rider" routerLinkActive="active">
+        Rider
       </a>
     </nav>
   </aside>
