--- a/HatBdFontend/src/app/Admin/admin-layout/admin-layout.component.html
+++ b/HatBdFontend/src/app/Admin/admin-layout/admin-layout.component.html
@@ -33,7 +33,7 @@
         <span class="admin-name">Admin</span>
         <a routerLink="/layout/profile" routerLinkActive="active">Profile</a>
 
-        <button class="logout-btn">Logout</button>
+        <button routerLink="/login" class="logout-btn">Logout</button>
       </div>
     </header>
 
