--- a/HatBdFontend/src/app/Seller/sellerprofile/sellerprofile.component.html
+++ b/HatBdFontend/src/app/Seller/sellerprofile/sellerprofile.component.html
@@ -1,18 +1,15 @@
-<div class="profile-container" *ngIf="!loading && seller">
+<div class="profile-container" *ngIf="!loading && user">
 
-  <h2>Seller Profile</h2>
+  <h2>User Profile</h2>
 
-  <div class="profile-card mb-4 py-4 px-3">
-    <p><strong>Full Name:</strong> {{ seller.fullName }}</p>
-    <p><strong>Username:</strong> {{ seller.userName }}</p>
-    <p><strong>Email:</strong> {{ seller.email }}</p>
-    <p><strong>Phone:</strong> {{ seller.phone }}</p>
-    <p><strong>Shop Name:</strong> {{ seller.shopName }}</p>
-    <p><strong>Joined:</strong> {{ seller.createdAt | date:'mediumDate' }}</p>
-  </div>
-
-  <div class="text-center">
-    <button class="btn btn-light" (click)="logout()">Logout</button>
+  <div class="profile-card mb-4 py-4 px-3 ">
+    <p><strong>Full Name:</strong> {{ user.fullName }}</p>
+    <p><strong>Username:</strong> {{ user.userName }}</p>
+    <p><strong>Email:</strong> {{ user.email }}</p>
+    <p><strong>Phone:</strong> {{ user.phone }}</p>
+    <p><strong>Gender:</strong> {{ user.gender }}</p>
+    <p><strong>Register As:</strong> {{ user.registerAs }}</p>
+    <p><strong>Joined:</strong> {{ user.createdAT | date:'mediumDate' }}</p>
   </div>
 
 </div>
